Actions
Bug #21003
closedunexpected warning about ignored block
Bug #21003:
unexpected warning about ignored block
Description
Updated by byroot (Jean Boussier) over 1 year ago
- Backport changed from 3.1: UNKNOWN, 3.2: UNKNOWN, 3.3: UNKNOWN, 3.4: UNKNOWN to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: REQUIRED
Updated by ydah (Yudai Takada) over 1 year ago
memo) This does not occur even in Ruby 3.4.1 when --parser=parse.y.
❯ ruby --parser=parse.y -e '$VERBOSE = true
def foo(*, &block) = block
def bar(buz, ...) = foo(buz, ...)
bar(:test) {}'
~
❯ ruby --parser=parse.y -v -e '$VERBOSE = true
def foo(*, &block) = block
def bar(buz, ...) = foo(buz, ...)
bar(:test) {}'
ruby 3.4.1 (2024-12-25 revision 48d4efcb85) [arm64-darwin23]
Updated by kddnewton (Kevin Newton) over 1 year ago
- Assignee set to prism
Updated by kddnewton (Kevin Newton) over 1 year ago
- Status changed from Open to Closed
Applied in changeset git|2a1cff40f5e7875f69a7d0ed59eab92cc86c65ff.
Do not warn unused block when using forwarding
Fixes [Bug #21003]
Updated by k0kubun (Takashi Kokubun) over 1 year ago
- Backport changed from 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: REQUIRED to 3.1: DONTNEED, 3.2: DONTNEED, 3.3: DONTNEED, 3.4: DONE
ruby_3_4 d720ea59ca36f726b8484b3b66e3e2c40784ac89 merged revision(s) 2a1cff40f5e7875f69a7d0ed59eab92cc86c65ff.
Actions