Do not warn unused block when using forwarding

Fixes [Bug #21003]